tests/compile_fail/invalid_filter_field.stderr
error[E0308]: mismatched types
 --> $DIR/invalid_filter_field.rs:5:14
  |
5 |     #[filter(bad_filter)]
  |              ^^^^^^^^^^ incorrect number of function parameters
  |
  = note: expected fn pointer `for<'r> fn(&'r u32) -> bool`
                found fn item `fn() {bad_filter}`
